ich habe die Styleshit hizugefügt und habe die Tabelle formatiert

--- a/Test/index.html
+++ b/Test/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
 </head>
 <body>
 
@@ -28,7 +29,7 @@
         <input type="submit" ng-click="click()" name="hinzu">
     </form>
 
-    <table>
+    <table class="table table-bordered">
 
         <thead>
         <tr>
