--- a/Test/index.html
+++ b/Test/index.html
@@ -20,10 +20,15 @@
 
     <form>
 
+        <label>Name</label>
         <input type="text" ng-model="name">
+        <label>Alter</label>
         <input type="number" ng-model="alter">
+        <label>Adresse</label>
         <input type="text" ng-model="adresse">
+        <label>Sex</label>
         <input type="text" ng-model="sex">
+        <label>Email</label>
         <input type="email" ng-model="email">
         <br>
         <input type="submit" ng-click="click()" name="hinzu">
