--- a/Test/index.html
+++ b/Test/index.html
@@ -11,27 +11,27 @@
 <script src="js/mainApp.js"></script>
 <script src="js/model.js"></script>
 <script src="js/ctrl.js"></script>
-
+<div class="container">
 
 <div ng-controller="Controller">
                        <h2 id="kunde_name"></h2>
                        <h1>{{name}}</h1>
 
 
-    <form>
+    <form class="checkbox">
 
-        <label>Name</label>
+        <label class="control-label">Name</label>
         <input type="text" ng-model="name">
-        <label>Alter</label>
+        <label class="control-label">Alter</label>
         <input type="number" ng-model="alter">
-        <label>Adresse</label>
+        <label class="control-label">Adresse</label>
         <input type="text" ng-model="adresse">
-        <label>Sex</label>
+        <label class="control-label">Sex</label>
         <input type="text" ng-model="sex">
-        <label>Email</label>
+        <label class="control-label">Email</label>
         <input type="email" ng-model="email">
         <br>
-        <input type="submit" ng-click="click()" name="hinzu">
+        <input type="submit" ng-click="click()" value="Hizufügen" class="btn btn-success">
     </form>
 
     <table class="table table-bordered">
@@ -73,6 +73,6 @@
 
 </div>
 
-
+</div>
 </body>
 </html>e
